--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^7.5.0",
     "multer": "^1.4.3",
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "swagger-autogen": "^2.23.5"
   }
 }
